--- a/app/src/main/res/layout/fragment_remito.xml
+++ b/app/src/main/res/layout/fragment_remito.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="#90caf9"
     tools:context="RemitoFragment">
 
 
@@ -12,19 +12,22 @@
         android:id="@+id/rvFilterByRemito"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        tools:listitem="@layout/item_recyclerview"
+        android:background="#90caf9"
+        app:layout_constraintBottom_toTopOf="@+id/btnPostDetailsRemitos"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/btnPostDetailsRemitos"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:listitem="@layout/item_recyclerview" />
 
     <Button
         android:id="@+id/btnPostDetailsRemitos"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_margin="8dp"
-        android:backgroundTint="@color/gray"
-        android:text="enviar datos leidos"
+        android:backgroundTint="#006db3"
+        android:text="enviar remitos seleccionados"
         app:cornerRadius="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
