--- a/app/src/main/res/layout/item_recyclerview.xml
+++ b/app/src/main/res/layout/item_recyclerview.xml
@@ -4,16 +4,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_gravity="center"
-    android:orientation="vertical"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="8dp"
+    app:cardCornerRadius="10dp"
+    android:orientation="horizontal"
+    android:background="#90caf9">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_margin="4dp"
         android:layout_height="150dp"
-        android:background="@color/gray">
-
+        android:background="#006db3"
+        android:layout_marginTop="4dp">
 
         <TextView
             android:id="@+id/tvNumeroRemito"
@@ -23,6 +25,7 @@
             android:text="Remito"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:textColor="@color/white"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/checkBoxAll"
             app:layout_constraintTop_toTopOf="parent"
@@ -36,6 +39,7 @@
             android:text="Remito"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:textColor="@color/white"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/checkBoxAll"
             app:layout_constraintTop_toTopOf="parent"
@@ -49,6 +53,7 @@
             android:text="Remito"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:textColor="@color/white"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/checkBoxAll"
             app:layout_constraintTop_toTopOf="@+id/tvFechaRemito"
@@ -59,6 +64,9 @@
             android:id="@+id/checkBoxAll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Remito"
+            android:shadowColor="@color/white"
+            android:textColor="@color/white"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
