Parse data from the api @post to myHashMap for compare data with the gun data

--- a/app/src/main/res/navigation/nav_host.xml
+++ b/app/src/main/res/navigation/nav_host.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/remitoFragment"
-        android:name="com.example.practicelistadapter.RemitoFragment"
+        android:name="com.example.practicelistadapter.fragment.RemitoFragment"
         android:label="fragment_remito"
         tools:layout="@layout/fragment_remito" />
 </navigation>
