FilterEpcAdapter implemented, falta comparar lo leido con la pistola con el adapter de los epc

--- a/app/src/main/res/navigation/nav_host.xml
+++ b/app/src/main/res/navigation/nav_host.xml
@@ -17,7 +17,7 @@
 
     <fragment
         android:id="@+id/filterEpcFragment"
-        android:name="com.example.practicelistadapter.FilterEpcFragment"
+        android:name="com.example.practicelistadapter.fragment.FilterEpcFragment"
         android:label="fragment_filter_epc"
         tools:layout="@layout/fragment_filter_epc" />
 </navigation>
